kuch toh kiya hai

--- a/FINALFINAL.ipynb
+++ b/FINALFINAL.ipynb
@@ -1440,26 +1440,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 31,
    "metadata": {
     "scrolled": false
    },
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "recogniser() missing 1 required positional argument: 'K'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-28-698c7203e6c9>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0midx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mimg\u001b[0m \u001b[0;32min\u001b[0m \u001b[0menumerate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnew_testing_im\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m     \u001b[0mrecogniser\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mimg\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnew_testing_label\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0midx\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mproj_data\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mw\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m: recogniser() missing 1 required positional argument: 'K'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "For testing image -1:\n",
+      "\n",
+      "Detected image from training images index 14 and distance value 45449657.98160366\n",
+      "Face recognised and found in the dataset\n",
+      "For testing image -1:\n",
+      "\n",
+      "Detected image from training images index 14 and distance value 53890902.467777275\n",
+      "Face recognised, but did not find it in the dataset\n",
+      "For testing image -1:\n",
+      "\n",
+      "Detected image from training images index 132 and distance value 42364121.895962484\n",
+      "Face recognised and found in the dataset\n",
+      "For testing image -1:\n",
+      "\n",
+      "Detected image from training images index 70 and distance value 53190982.98567941\n",
+      "Face recognised, but did not find it in the dataset\n",
+      "For testing image -1:\n",
+      "\n",
+      "Detected image from training images index 132 and distance value 40483335.228228115\n",
+      "Face recognised and found in the dataset\n",
+      "For testing image -2:\n",
+      "\n",
+      "Detected image from training images index 14 and distance value 36447008.117760055\n",
+      "Face recognised and found in the dataset\n"
      ]
     }
    ],
    "source": [
     "for idx, img in enumerate(new_testing_im):\n",
-    "    recogniser(img, new_testing_label[idx], proj_data, w)"
+    "    recogniser(img, new_testing_label[idx], proj_data, w, 3, True)"
    ]
   },
   {
